# limitations under the License.
#

This is the changelog for the Siconos package, www.siconos.gforge.inria.fr.
Entries are written backwards. That is, items at the bottom
of the file were added first, and each subsequent addition is placed on a line
before it.

--------------------------------------------------------------------------------
  v4.2.0 (in development branch siconos/master)
--------------------------------------------------------------------------------
Main changes:
	[...]

	* [kernel] remove Model class


	* [kernel,mechanics,control,io] new API for the initilaization of simulation.
	It is no longer mandatory to call for simulation initialize before running
	a simulation. Warning: this modification is quit deep and changes a lot the
	internal implementation of initialization of objects

	* [kernel] add _relationMatrices and _relationVectors in Interaction
	The objective is to be able to use modeling classes without resorting to
        work matrices and vectors. Work matrices are only used for simulation purpose.
        These matrices and vectors are stored in interaction rather than in Relation to
        continue to be able to use just one relation in multiple interaction. If this
        option continue to be chosen, we could also move relation matrices of LagrangianR
        and NewtonEuler R.

        * [kernel] remove work vectors and matrices, computeLinearizedOutput/Input,
	prepareNewtonIteration from Relation classes.

        * [kernel] Important change in initMemory of DS
        The memory is only initialized if we need more steps in Memory.
        This hacks is done to avoid multiple memory resetting if multiple simulations shared the same memory
        In the latter case, this has to be done more carefully in the future.

	* [kernel] separate initialization of DSlink and work vectors and matrices in Relation.
        rename initialize --> initializeDSLink
        rename initcomponents --> initializeWorkVectorsAndMatrices
