@@ -1,8 +1,0 @@
-# default configuration for examples with bullet and mechanics component
-set_option(DEV_MODE OFF)
-set_option(WITH_TESTING OFF)
-set_option(WITH_SYSTEM_INFO ON)
-set_option(WITH_BULLET ON)
-set_option(WITH_PYTHON_WRAPPER ON)
-set_components(externals;numerics;kernel;control;mechanics;io)
-
