@@ -229,42 +229,6 @@ siconos_with_umfpack = siconos_default.copy()(
     add_pkgs=['umfpack'])
 
 
-# --- Config to run siconos examples ---
-
-# Note FP/MB : this should be the only task(s) that run examples !!!
-#        We may add later some 'examples-with-bullet' or 'examples-with-mechanisms' ... tasks later.
-#        All tasks 'examples' should:
-#         - conf, make and make install of siconos components (no tests!)
-#         - conf, make and make test of siconos examples
-
-# Case1 : siconos 'basics' components, numerics, kernel, control and related examples
-siconos_light_examples = minimal_with_python.copy()(
-    ci_config='examples_light',
-    targets={'.': ['docker-build', 'docker-cmake', 'docker-make',
-                   'docker-make-install', 'docker-make-clean'],
-             'examples': ['docker-build', 'docker-ctest', 'docker-make-clean']},
-    add_srcs=['examples'])
-
-# Case2 : siconos with mechanics components and bullet + related examples
-siconos_all_examples = minimal_with_python.copy()(
-    ci_config='examples_all',
-    add_pkgs=['bullet', 'h5py'],
-    targets={'.': ['docker-build', 'docker-cmake', 'docker-make',
-                   'docker-make-install', 'docker-make-clean'],
-             'examples': ['docker-build', 'docker-ctest', 'docker-make-clean']},
-    add_srcs=['examples'])
-
-siconos_test_deb = SiconosCiTask(
-    ci_config='examples',
-    distrib='ubuntu:16.04',
-    pkgs=['siconos'],
-    srcs=['examples'])
-
-siconos_test_rpm = SiconosCiTask(
-    ci_config='examples',
-    distrib='fedora:latest',
-    pkgs=['siconos'],
-    srcs=['examples'])
 
 siconos_dev_mode_strict = siconos_default.copy()(
     ci_config='with_dev_mode_strict')
@@ -296,10 +260,6 @@ known_tasks = {'siconos---vm0':
                'siconos---vm2':
                (siconos_clang_msan,
                 siconos_ubuntu_15_10_with_mechanisms),
-
-               'siconos---vm3':
-               (siconos_light_examples,
-                siconos_all_examples),
 
                'siconos---vm4':
                (siconos_numerics_only)}
